--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ chromadb = "^0.5.0"
 python-dotenv = "^1.0.0"
 pydantic-settings = "^2.2.1"
 beanie = "^1.26.0"
+asgi-lifespan = "^2.1.0"
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
