--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ aiosqlite = "^0.20.0"
 faker = "^25.4.0"
 mypy = "^1.11.1"
 ruff = "^0.5.7"
+pytest-cov = "^5.0.0"
 
 [tool.poetry.dependencies]
 python = "3.11.9"
